namespace Invoyz.Api.Domain.Invoices;

public enum InvoiceStatus
{
    Draft,
    Sent,
    Paid,
    Overdue
}
