namespace Invoyz.Api.Domain.PdfJobs;

public enum PdfJobStatus
{
    Pending,
    Printing,
    Printed,
    Failed
}
